fixing border and alignement in footer

--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -152,7 +152,7 @@ body::after {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-image: radial-gradient(circle, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
+	background-image: radial-gradient(circle, rgba(255, 255, 255, 0.02) 1px, transparent 1px);
 	background-size: 20px 20px;
 	pointer-events: none;
 	z-index: 1;
